chore: rebuild content.json

--- a/content/ecological-agency-anadol-critique.html
+++ b/content/ecological-agency-anadol-critique.html
@@ -1,2 +1,2 @@
 <p>The book is edited by Jernej Markelj and Claudio Celis Bueno, and published by the Institute for Network Cultures (INC). It is released in an Open Access format as Vol. 4 of the Network Notions series, and can be freely accessed and downloaded <a href="https://networkcultures.org/blog/publication/vectoral-agents-power-in-the-age-of-planetary-computation/">here</a>.</p>
-<p><img src="assets/uploads/vectoral-agents-2025-image.png" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/vectoral-agents-2025-image.png" alt=""></p>
