--- a/content/joining-the-editorial-board-of-the-scottish-university-press-open-access.html
+++ b/content/joining-the-editorial-board-of-the-scottish-university-press-open-access.html
@@ -1,3 +1,3 @@
-<p><img src="assets/uploads/old/SUP.jpg" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/old/SUP.jpg" alt=""></p>
 <p>As of August 2022, I&#39;m joining the founding editorial board of the newly established Scottish University Press (SUP). This is a fully Open Access and non-profit academic press run in a collaboration between 18 Scottish universities and university libraries. I&#39;m very passionate about Open Access publishing, so I&#39;m very happy to be involved in this initiative.</p>
 <p>The announcement concerning the formation of the editorial board can be found <a href="https://www.scurl.ac.uk/sup-editorial-board">here</a>, and we will continue to release information about SUP opportunities and projects through the press <a href="https://twitter.com/ScotUniPress">Twitter account</a>.</p>
