--- a/content/out-now-tactical-entanglements-ai-art-creative-agency-and-the-limits-of-intellectual-property.html
+++ b/content/out-now-tactical-entanglements-ai-art-creative-agency-and-the-limits-of-intellectual-property.html
@@ -1,5 +1,5 @@
 <p><strong>Published June 2021 with meson press – available now as a free ebook or as paperback through online booksellers</strong></p>
-<p><img src="assets/uploads/old/TomWhite-cropped.jpg" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/old/TomWhite-cropped.jpg" alt=""></p>
 <p>&gt;<strong>Blurb:</strong> &lt;br&gt;<br>How do artistic experiments with artificial intelligence problematize human-centered notions of creative agency, authorship, and ownership? Offering a wide-ranging discussion of contemporary digital art practices, philosophical and technical considerations of AI, posthumanist thought, and emerging issues of intellectual property and the commons, this book is firmly positioned against the anthropomorphic spectacle of “creative AI.” It proposes instead the concept of the posthumanist agential assemblage, and invites readers to consider what new types of creative practice, what reconfigurations of the author function, and what critical interventions become possible when AI art provokes tactical entanglements between aesthetics, law, and capital.</p>
 <p>Download the book Open Access ebook <a href="https://meson.press/books/tactical-entanglements/">here</a>.</p>
 <p>---<br>Image credit: Image credit: Tom White (2018)</p>
