--- a/content/wet-tech-04.html
+++ b/content/wet-tech-04.html
@@ -1,1 +1,1 @@
-<p><img src="assets/uploads/wet-tech-4.png" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/wet-tech-4.png" alt=""></p>
