--- a/content/agential-assemblage-tactical-ai-two-contributions-to-chimeras-inventory-of-synthetic-cognition.html
+++ b/content/agential-assemblage-tactical-ai-two-contributions-to-chimeras-inventory-of-synthetic-cognition.html
@@ -1,4 +1,4 @@
 <p>I was invited to contribute two entries to the encyclopaedic volume _Chimeras: Inventory of Synthetic Cognition_, published by the Onassis Foundation. The book collects critical perspectives on AI and digital art from over 150 researchers, activists, philosophers, and artists. It&#39;s an incredible group of contributors, and I&#39;m very happy to be part of it.</p>
 <p>The final product is a beautiful artefact – more about it, as well as order info, <a href="https://www.onassis.org/culture/publications/chimeras-inventory-of-synthetic-cognition">here</a>.</p>
 <p>For online reading, the book is now also made available as a free ebook, downloadable as a <a href="https://www.onassis.org/cms/documents/600/Chimeras_Inventory-of-Synthetic-Cognition.pdf">PDF</a>.</p>
-<p><img src="assets/uploads/old/chimeras.jpg" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/old/chimeras.jpg" alt=""></p>
