--- a/content/cfp-tacit-engagement-in-the-digital-age-crassh.html
+++ b/content/cfp-tacit-engagement-in-the-digital-age-crassh.html
@@ -1,4 +1,4 @@
-<p><img src="assets/uploads/old/re-colour.jpg" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/old/re-colour.jpg" alt=""></p>
 <p>I&#39;m a member of the Steering Committee for the <a href="http://www.crassh.cam.ac.uk/programmes/re-interdisciplinary-network">&#39;Re-&#39; Interdisciplinary Research Network</a> at CRASSH (Cambridge University), and we have a symposium coming up in early summer. The CFP is copied below (it&#39;s also available <a href="http://www.crassh.cam.ac.uk/events/28385">online</a>)</p>
 <p><strong>CALL FOR PAPERS: Deadline for abstracts (300 words + refs) 15th April</strong></p>
 <p><strong>CONFERENCE: Tacit Engagement in the Digital Age (June 26-28, Cambridge/UK)</strong></p>
