--- a/content/unownability-on-the-blockchain.html
+++ b/content/unownability-on-the-blockchain.html
@@ -1,4 +1,4 @@
-<p><img src="assets/uploads/old/ML8-logo.jpg" alt=""></p>
+<p><img class="responsive-image" loading="lazy" src="assets/uploads/old/ML8-logo.jpg" alt=""></p>
 <p><a href="https://aksioma.org/moneylab8/">MoneyLab 8</a> was organised by the excellent folks at <a href="https://aksioma.org/">Aksioma</a>, as always in collaboration with the <a href="https://networkcultures.org/">Institute for Network Cultures</a>.</p>
 <p>I spoke on a panel called &quot;<a href="https://aksioma.org/jaya-klara-brekke-max-haiven-martin-zeilinger-inte-gloerich-blockchain-radicalising-the-social-imagination">Radicalising the Social Imagination</a>,&quot; with Max Haiven, Jaya Klara Brekke, moderated by Inte Glorich.</p>
 <p>My contribution, &quot;Unownability on the Blockchain,&quot; starts about 25 minutes into the video, and a lively discussion follows the panel presentations.</p>
