Update cycling page content

--- a/cycling.html
+++ b/cycling.html
@@ -24,7 +24,7 @@
       <header class="section-header">
         <!-- <div class="section-title">_Cycling</div> -->
         <h1 class="section-subtitle" style="font-size: 2.2rem; line-height: 1.1; font-weight: 500; margin-bottom: 1.5rem;">
-          Content related to Critical Cycling Studies
+          Critical Cycling Studies
         </h1>
       </header>
 
