--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a class="contact-pill" href="https://www.instagram.com/mrtnzlngr/" target="_blank" rel="noopener">
               <strong>IG</strong>
             </a>
-            <a class="contact-pill" href="www.linkedin.com/in/martin-zeilinger-43251b1a" target="_blank" rel="noopener">
+            <a class="contact-pill" href="https://www.linkedin.com/in/martin-zeilinger-43251b1a" target="_blank" rel="noopener">
               <strong>LnkdIn</strong>
             </a>
           </div>
