--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         </div> -->
       </div>
 
-      <aside class="hero-feature" id="hero-feature" aria-label="Pinned entry">
+      <aside class="hero-feature" id="hero-feature" aria-label="_Pinned Entry">
         <div class="hero-feature-image" id="hero-feature-image" aria-hidden="true">
           <img id="hero-feature-image-el" loading="lazy" alt="" hidden />
         </div>
         <div class="hero-feature-body">
-          <div class="hero-feature-label" id="hero-feature-label">_Pinned entry</div>
+          <div class="hero-feature-label" id="hero-feature-label">_Pinned Entry</div>
           <div class="hero-feature-title" id="hero-feature-title">Set a pinned entry in Decap to feature it here.</div>
           <p class="hero-feature-blurb" id="hero-feature-blurb"></p>
           <a class="hero-feature-pill" id="hero-feature-link" href="#" hidden>More...</a>
