Curatorial and site functionality updates

--- a/content/wet-tech-04.html
+++ b/content/wet-tech-04.html
@@ -1,1 +1,3 @@
+<p>Wet Tech #4 – an evening of sounds made from and inspired by field recording, with new work by Jan Mertens (BE/UK) and Ecem Ince (TR/UK).</p>
+<p>Video documentation of both performances are available on the Wet Tech YouTube channel: <a href="https://youtu.be/oRffTJ3vf5g">Jan&#39;s performance</a> / <a href="https://youtu.be/mLuQKv6620c">Ecem&#39;s performance</a></p>
 <p><img class="responsive-image" loading="lazy" src="assets/uploads/wet-tech-4.png" alt=""></p>
