--- a/content/wet-tech-5.html
+++ b/content/wet-tech-5.html
@@ -1,3 +1,3 @@
-<p>The next installment in our occasional series of improvised electronic music and moving image events features two sets, by Jonathan Impett and Juan Parra (BE) and by Jung In Jung and Lynda Clark (UK)[](https://marjz.notion.site/Wet-Tech-5-info-2abcbe89c3bc802a9408d34fcce55026)</p>
+<p>The next installment in our occasional series of improvised electronic music and moving image events features two sets, by Jonathan Impett and Juan Parra (BE) and by Jung In Jung and Lynda Clark (UK)</p>
 <p><a href="https://marjz.notion.site/Wet-Tech-5-info-2abcbe89c3bc802a9408d34fcce55026">More info</a></p>
 <p><img class="responsive-image" loading="lazy" src="assets/uploads/wet-tech-5.png" alt=""></p>
