Updates (Teaching page func etc.)

--- a/curatorial.html
+++ b/curatorial.html
@@ -24,7 +24,7 @@
       <header class="section-header">
         <!-- <div class="section-title">_Curatorial</div> -->
         <h1 class="section-subtitle" style="font-size: 2.2rem; line-height: 1.1; font-weight: 500; margin-bottom: 1.5rem;">
-          Information about curatorial projects
+          Information about curatorial activities
         </h1>
       </header>
 
