--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <span class="hero-highlight"> [empty] </span>
         </h1> -->
         <h3 class="hero-lede hero-heading hero-heading--accent">
-          Crossings-over between interdisciplinary research, creative practice, and curatorial work...
+          Crossings-over between interdisciplinary research, creative practice, and curatorial work
         </h3>
         <p class="hero-lede">
           My interests include digital art, AI, critical approaches to blockchain, permacomputing, IP issues in digital culture, agency and posthumanism, experimental videogame cultures, sound art, and 🚴‍♂️
