--- a/teaching.html
+++ b/teaching.html
@@ -27,15 +27,23 @@
           Teaching, supervision, workshops, and similar activities
         </h1>
       </header>
-      <p class="hero-lede">
-        In preparation.
-      </p>
+      <article id="about-content" class="rich-text" data-source="content/teaching.md">
+        <p>Loading teaching page...</p>
+      </article>
+    </section>
+
+    <section class="section">
+      <header class="section-header">
+        <div class="section-title">List view of relevant entries</div>
+        <h2 class="section-subtitle">Teaching activities</h2>
+      </header>
       <div id="section-list" class="browse-results"></div>
     </section>
   </main>
   <script src="assets/nav.js"></script>
   <script src="assets/main.js"></script>
   <script src="assets/section-page.js"></script>
+  <script src="assets/about-page.js"></script>
   <script src="assets/external-links.js"></script>
 </body>
 </html>
