--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,7 @@
       <header class="section-header">
         <!-- <div class="section-title">_Teaching</div> -->
         <h1 class="section-subtitle" style="font-size: 2.2rem; line-height: 1.1; font-weight: 500; margin-bottom: 1.5rem;">
-          Teaching, supervision, workshops, and similar activities
+          Teaching, supervision, and similar activities
         </h1>
       </header>
       <article id="about-content" class="rich-text" data-source="content/teaching.md">
